# snipara-mcp

./: .gitignore  README.md  glama.json  pyproject.toml  skill.md
.github/workflows/: ci.yml
src/snipara_mcp/: __init__.py  auth.py  cli.py  rlm_tools.py  server.py  tool_contract.py
tests/: conftest.py  test_mcp_e2e.py  test_package_contract.py  test_rlm_tools_memory.py  test_server_memory_surface.py  test_server_shared_context_bootstrap.py
